--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
   transition: border-color .2s ease;
   width: 100%;
 }
-#search-wrapper #search + i {
+#search-wrapper #search + i, #search-wrapper-rooms input + i  {
   border-bottom: 1px solid #ccc;
   border-right: 0;
   border-top: 0;
@@ -56,7 +56,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
   transition: border-color .2s ease;
 }
 
-#search-wrapperRooms {
+#search-wrapper-rooms {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -71,7 +71,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
 	width: 100%;
 }
 
-#search-wrapperRooms #searchRooms {
+#search-wrapper-rooms #searchRooms {
   border-left: 0;
   border-top: 0;
   border-right: 0;
@@ -79,17 +79,6 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
   -webkit-transition: border-color .2s ease;
   transition: border-color .2s ease;
   width: 100%;
-}
-
-#search-wrapperRooms #searchRooms + i {
-  border-bottom: 1px solid #ccc;
-  border-right: 0;
-  border-top: 0;
-  border-left: 0;
-  color: #495057;
-  padding: .69rem .65rem;
-  -webkit-transition: border-color .2s ease;
-  transition: border-color .2s ease;
 }
 
 .nav {
@@ -542,4 +531,8 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
 .nav.nav-pills.nav-stacked li a.active{
   opacity: 1 !important;
   font-weight: bold;
+}
+.fill{
+  min-height: 100%;
+  height: 100%;
 }
