--- a/public/css/style.css
+++ b/public/css/style.css
@@ -524,7 +524,12 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
 	color: white !important;
 }
 
-/*Por Abraham*/
+/*
+*
+* CSS por Abraham
+*
+*/
+/* NAV */
 .nav.nav-pills.nav-stacked li a, .nav.nav-pills.nav-stacked li span{
   opacity: 0.6;
 }
@@ -532,7 +537,15 @@ background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox=
   opacity: 1 !important;
   font-weight: bold;
 }
+/* GENERAL */
 .fill{
   min-height: 100%;
   height: 100%;
+}
+/* HOME */
+#card-box-messages.card{
+  min-height: 200px;
+}
+#sidebar-block.card-body{
+  min-height: 250px;
 }
