--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,20 +11,19 @@
 }
 /* - - */
 body {
-	background-color: #ffffff !important;
+  background-color: #ffffff !important;
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 .table > tbody > tr > td {
-     vertical-align: middle;
+  vertical-align: middle;
 }
 
 .remove-rounded{
   -webkit-border-radius: 0 !important;
-     -moz-border-radius: 0 !important;
-          border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
 }
-
-@import "https://fonts.googleapis.com/css?family=Lato:400,700";
 *,
 *:before,
 *:after {
@@ -36,15 +35,15 @@ body {
 #search-wrapper {
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-flex-flow: row-reverse nowrap;
-      -ms-flex-flow: row-reverse nowrap;
-          flex-flow: row-reverse nowrap;
+  -ms-flex-flow: row-reverse nowrap;
+  flex-flow: row-reverse nowrap;
 	width: 100%;
 }
 #search-wrapper #search {
@@ -70,15 +69,15 @@ body {
 #search-wrapper-rooms {
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-flex-flow: row-reverse nowrap;
-      -ms-flex-flow: row-reverse nowrap;
-          flex-flow: row-reverse nowrap;
+  -ms-flex-flow: row-reverse nowrap;
+  flex-flow: row-reverse nowrap;
 	width: 100%;
 }
 
@@ -559,6 +558,20 @@ body {
   min-height: 100%;
   height: 100%;
 }
+.btn-primary {
+  color: #fff;
+  background-color: #4c8ec7;
+  border-color: #4c8ec7;
+  box-shadow: 0 0 0 0 #00000030;
+  border: 1px solid #4c8ec7;
+}
+.btn-danger, .btn-primary, .btn-success, .dark-blue-btn, .btn-secondary {
+  border-radius: 25px;
+  min-height: 35px !important;
+  line-height: 20px !important;
+  text-transform: capitalize;
+  font-size: .95em;
+}
 /* HOME */
 #card-box-messages.card{
   min-height: 200px;
@@ -568,4 +581,11 @@ body {
 }
 #scroll-messages-content.messages-content span>p{
   margin-bottom: 2px !important;
+}
+/* Login */
+#showModalLogin label{
+  font-weight: 600 !important;
+}
+#showModalLogin .btn{
+  font-size: .8em;
 }
