--- a/public/css/style.css
+++ b/public/css/style.css
@@ -572,6 +572,20 @@ body {
   text-transform: capitalize;
   font-size: .95em;
 }
+/* Navbar */
+#toggleSound .btn-primary{
+  border: none;
+}
+#toggleSound .btn-primary label.btn-primary {
+  background-color: #51ce86;
+  border: 1px solid #51ce86 !important;
+  color: #fff !important;
+}
+.primary-menu li{
+  padding-right: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 /* HOME */
 #card-box-messages.card{
   min-height: 200px;
