--- a/public/css/style.css
+++ b/public/css/style.css
@@ -612,3 +612,38 @@ body {
   border: 1px solid #51ce86 !important;
   color: #fff !important;
 }
+/* slide_block */
+#slide_block {
+  margin-left: -30px;
+  right: 0;
+}
+.slide_block {
+  border-radius: 3px 0 0 3px !important;
+  z-index: 10;
+  width: 30px;
+  height: 60px;
+  background-color: #fff !important;
+  border: 1px solid #efefef;
+  border-right: 0;
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-top: -50px;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(0,0,0,.05),0 1px 6px rgba(0,0,0,.1) !important;
+}
+.slide_block::before {
+  display: block;
+  position: absolute;
+  top: 50%;
+  margin-top: -7px;
+  left: 50%;
+  margin-left: -3px;
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7.5px 10px 7.5px 0;
+  border-color: transparent #d4d0d0 transparent transparent;
+}
