--- a/public/css/style.css
+++ b/public/css/style.css
@@ -558,6 +558,9 @@ body {
   min-height: 100%;
   height: 100%;
 }
+.fill.vh100-55px{
+  height: calc(100vh - 55px) !important;
+}
 .btn-primary {
   color: #fff;
   background-color: #4c8ec7;
