--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@
 /* - - */
 body {
   background-color: #ffffff !important;
-  font-family: 'Open Sans', sans-serif !important;
+  /*font-family: 'Open Sans', sans-serif !important;*/
 }
 
 .table > tbody > tr > td {
