--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $line-height-base: 1.6;
 
 // Colors
 $blue: #3490dc;
+$blue-c: #4c8ec7;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
@@ -15,6 +16,7 @@ $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
+$green-c: #51ce86;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $white: #FFFFFF;
