--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -394,11 +394,7 @@ body {
 #sidebar-block.card-body{
     min-height: 250px;
 }
-#scroll-messages-content.messages-content span > p{
-    margin-bottom: 2px !important;
-    display: inline;
-}
-/* LoginUserComponent */
+/* LoginUserComponent.vue */
 #showModalLogin {
     label{
         font-weight: 600 !important;
@@ -407,7 +403,7 @@ body {
         font-size: .8em;
     }
 }
-/* RoomsComponent */
+/* RoomsComponent.vue */
 #showModalRooms{
     .btn-success {
         background-color: $green-c;
@@ -460,6 +456,32 @@ body {
             border: 1px solid $green-c !important;
             color: #fff !important;
         }
+    }
+}
+/* ChatMessagesComponent.vue */
+#scroll-messages-content{
+    .msg{
+        display: inline;
+    }
+    span{
+        margin-left: 5px;
+        display: inline;
+        > p{
+            margin: 0px !important;
+            margin-bottom: 2px !important;
+            display: inline;
+        }
+    }
+    .date{
+        display: inline;
+    }
+    .report{
+        opacity: 0;
+        float: right;
+        margin-right: 15px;
+    }
+    .message_block:hover .report{
+        opacity: 0.5;
     }
 }
 /* slide_block */
