--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11068,6 +11068,17 @@ body {
   border: 1px solid #ddd;
 }
 
+@media (max-width: 768px) {
+  #navbarSupportedContent {
+    position: absolute;
+    top: 50px;
+    background: white;
+    z-index: 9;
+    padding: 20px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  }
+}
+
 .nav-tabs {
   border-bottom: 1px solid #ddd;
 }
@@ -11257,6 +11268,12 @@ body {
   font-size: 14px;
 }
 
+@media (max-width: 576px) {
+  .navbar-custom a {
+    font-size: 12px;
+  }
+}
+
 #toggleSound .btn-primary {
   border: none;
 }
@@ -11267,10 +11284,96 @@ body {
   color: #fff !important;
 }
 
+#toggleSound .btn label.toggle-off {
+  background-color: #ff0142 !important;
+  border: 1px solid #ff0142 !important;
+  color: #fff !important;
+}
+
+@media (max-width: 768px) {
+  .primary-menu {
+    display: inline;
+  }
+}
+
 .primary-menu li {
   padding-right: 20px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .primary-menu li {
+    padding-right: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    text-align: center;
+    display: inline-block;
+  }
+
+  .primary-menu li i {
+    font-size: 21px;
+  }
+}
+
+@media (max-width: 576px) {
+  .primary-menu li.rooms-list span {
+    display: block;
+  }
+}
+
+@media (max-width: 576px) {
+  .primary-menu li.private-msg {
+    vertical-align: text-bottom;
+  }
+
+  .primary-menu li.private-msg span {
+    display: none;
+  }
+}
+
+.primary-menu li.sounds .nav-link {
+  display: block ruby;
+}
+
+@media (max-width: 576px) {
+  .primary-menu li.sounds .nav-link {
+    display: block;
+  }
+}
+
+.primary-menu li.sounds .nav-link #toggleSound > .toggle {
+  height: 25px !important;
+  min-height: 20px !important;
+  line-height: 10px !important;
+}
+
+.primary-menu li.sounds .nav-link #toggleSound > .toggle .toggle-on,
+.primary-menu li.sounds .nav-link #toggleSound > .toggle .toggle-off {
+  height: 25px !important;
+  min-height: 20px !important;
+  line-height: 10px !important;
+}
+
+@media (max-width: 576px) {
+  .primary-menu li.sounds .nav-link #toggleSound > .toggle {
+    height: 15px !important;
+    min-height: 0px !important;
+  }
+
+  .primary-menu li.sounds .nav-link #toggleSound > .toggle .toggle-on,
+  .primary-menu li.sounds .nav-link #toggleSound > .toggle .toggle-off {
+    height: 15px !important;
+    min-height: 0px !important;
+    padding: 0px !important;
+    line-height: 14px !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .primary-menu li.sounds span {
+    display: none;
+  }
 }
 
 /* Avatar */
