[FIX] Tablet 768px menu style

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -190,7 +190,7 @@ body {
     }
 }
 #navbarSupportedContent{
-    @media(max-width:$medium){
+    @media(max-width:$medium - 1px){
         position: absolute;
         top: 50px;
         background: white;
