--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -601,6 +601,8 @@ body {
         background: white;
         right: 0;
         max-width: 300px;
+        z-index: 9;
+        height: 100%;
     }
     table{
         background: white;
