--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -650,6 +650,32 @@ body {
     #search-wrapper-rooms input, #search-wrapper input, #search-wrapper-rooms i, #search-wrapper i{
         border: 0px !important;
     }
+    .popup_user {
+        display: none;
+        position: absolute;
+        color: black;
+        padding: 40px;
+        border: solid 1px #ddd;
+        background: #f4f4f4 !important;
+        width: 150px;
+        z-index: 9;
+        padding: 0px;
+        font-size: .7em;
+        div{
+            width: 100%;
+            padding: 5px;
+            &:hover{
+                background: #eee;
+            }
+            a{
+                height: 100%;
+                width: 100%;
+                display: inline-block;
+                text-decoration: none;
+                color: black;
+            }
+        }
+    }
 }
 /* slide_block */
 #slide_block {
@@ -684,5 +710,90 @@ body {
         border-style: solid;
         border-width: 7.5px 10px 7.5px 0;
         border-color: transparent #d4d0d0 transparent transparent;
+    }
+}
+/*PrivateComponent.vue*/
+.chat-private{
+    position: absolute;
+    bottom: 0;
+    right: 25px;
+    .chat-main{
+        width: 270px;
+        z-index: 99;
+        background: white;
+        margin-right: 10px;
+    }
+    .chat-header{
+        background: $blue;
+        padding-top: 1px;
+        padding-bottom: 1px;
+    }
+    .username{
+        i{
+            font-size: 9px;
+        }
+        h6{
+            display: inline-block;
+            font-size: 12px;
+            font-weight: 600;
+        }
+    }
+    .options {
+        a{
+            color: white;
+        }
+        i{
+            font-size: 14px;
+            font-weight: normal;
+            opacity: 0.7;
+        }
+        .live-video{
+            font-size: 6px;
+        }
+    }
+    .chats{
+        height: 260px;
+        overflow-x: scroll;
+        overflow-x: hidden;
+        ul li{
+            list-style: none;
+            clear: both;
+            font-size: 13px;
+        }
+        .send-msg{
+            float: right;
+        }
+    }
+    .receive-msg {
+        img{
+            border-radius: 100%;
+            height: 30px;
+            width: 12%;
+        }
+        .receive-msg-desc{
+            display: inline-block;
+        }
+        .receive-msg-desc p{
+            background: #c1c1c1;
+        }
+    }
+    .receive-msg-img{
+        display: inline;
+    }
+    .message-box {
+        input{
+            border: none;
+            font-size: 13px;
+            opacity: 0.7;
+        }
+        input:focus{
+            outline: none;
+        }
+    }
+    .tools i{
+        color: #a1a1a1;
+        cursor: pointer;
+        font-size: 20px;
+        margin-right: 6px;
     }
 }
